--- a/MyNaggingMom/Views/Home/Index.cshtml
+++ b/MyNaggingMom/Views/Home/Index.cshtml
@@ -3,12 +3,12 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Cat Box Reminder</h1>
+    <p class="lead">The goal of this project is for a text to send a reminder when a cat box needs to be cleaned. If the text is ignored you get more texts at an increasing rate until the box is marked clean.</p>
+    <p><a href="/CatBox/Clean" class="btn btn-primary btn-lg">Clean the Cat Box &raquo;</a></p>
 </div>
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
@@ -28,4 +28,4 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
-</div>
+</div>*@
