--- a/MyNaggingMom/Views/Shared/_Layout.cshtml
+++ b/MyNaggingMom/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - CatBox</title>
+    <title>Do Your Chores! @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,10 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("My Nagging Mom", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Do your chores!", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Check the Cat Box", "Index", "CatBox")</li>
                     <li>@Html.ActionLink("Clean the Cat Box", "Clean", "CatBox")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
