--- a/MyNaggingMom/Content/Site.css
+++ b/MyNaggingMom/Content/Site.css
@@ -22,3 +22,17 @@ select,
 textarea {
     max-width: 280px;
 }
+
+table{
+    background-color: lightgray;
+    color: darkslategray;
+}
+
+th{
+    padding: 5px;
+    padding-right: 10px;
+}
+
+td{
+    padding: 5px;
+}
