--- a/DoYourChores/Views/Shared/_Layout.cshtml
+++ b/DoYourChores/Views/Shared/_Layout.cshtml
@@ -21,10 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Check the Cat Box", "Index", "CatBox")</li>
-                    <li>@Html.ActionLink("Clean the Cat Box", "Clean", "CatBox")</li>
                 </ul>
-                @Html.Partial("_LoginPartial")
+               @*@Html.Partial("_LoginPartial")*@
             </div>
         </div>
     </div>
