Changed title back to home, redundant

--- a/DoYourChores/Views/Home/Index.cshtml
+++ b/DoYourChores/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DoYourChores.Models.CatBox
 
 @{
-    ViewBag.Title = "Do Your Chores!";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
