Added general chores Hid register screen Add login back Lighter theme css

--- a/DoYourChores/Content/Site.css
+++ b/DoYourChores/Content/Site.css
@@ -24,8 +24,8 @@ textarea {
 }
 
 table{
-    background-color: lightgray;
-    color: darkslategray;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 th{
