--- a/DoYourChores/Views/Home/Index.cshtml
+++ b/DoYourChores/Views/Home/Index.cshtml
@@ -28,5 +28,5 @@
         </tr>
     </table>
     <br/>
-    <p>@Html.ActionLink(HttpUtility.HtmlDecode("Clean the Cat Box &raquo;"), "Clean", "CatBox", null, new { @class = "btn btn-primary" })</p>
+    <!--<p>@Html.ActionLink(HttpUtility.HtmlDecode("Clean the Cat Box &raquo;"), "Clean", "CatBox", null, new { @class = "btn btn-primary" })</p>-->
 </div>
